<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/high_score_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PlayActivityText"
            android:layout_marginEnd="@dimen/item_list_small_margins"
            android:layout_marginRight="@dimen/item_list_small_margins"
            android:text="@string/score_label" />

        <TextView
            android:id="@+id/score_text"
            style="@style/PlayActivityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_list_small_margins"
            android:layout_marginRight="@dimen/item_list_small_margins"
            tools:text="0" />

    </LinearLayout>

    <EditText
        android:id="@+id/initials_text"
        style="@style/LeaderboardEditText"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:hint="@string/initials_dialog_text"
        app:backgroundTint="@color/colorPrimary" />
</LinearLayout>